--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -97,3 +97,11 @@
     grid-template-columns: 45% 45%;
     grid-template-rows: 45% 45%;
 }
+
+.textbox-input {
+    border: 1px solid black;
+}
+
+.textbox-input {
+    border: 1px solid black;
+}
